monga.output
Grammar

    0 $accept: programa $end

    1 programa: definicao

    2 definicao: def_vars def_funcoes

    3 def_var: TK_ID ':' tipo ';'

    4 def_vars: def_vars def_var
    5         | %empty

    6 tipo: tipo_primario
    7     | '[' tipo ']'

    8 tipo_primario: TK_CHAR
    9              | TK_INT
   10              | TK_FLOAT
   11              | TK_BOOL

   12 def_funcao: TK_ID '(' parametros ')' ':' tipo_retorno bloco

   13 def_funcoes: def_funcao def_funcoes
   14            | %empty

   15 tipo_retorno: tipo
   16             | %empty

   17 parametros: parametro parametrosAlt
   18           | %empty

   19 parametrosAlt: ',' parametro parametrosAlt
   20              | %empty

   21 parametro: TK_ID ':' tipo

   22 bloco: '{' def_vars comandos '}'

   23 var: TK_ID
   24    | exp_generica '[' exp_somasub ']'

   25 comandos: comando comandos
   26         | %empty

   27 comando: TK_IF exp bloco
   28        | TK_IF exp bloco else
   29        | TK_WHILE exp bloco
   30        | var TK_ATTRIBUITION exp ';'
   31        | TK_RETURN exp_or ';'
   32        | TK_RETURN ';'
   33        | chamada ';'
   34        | '@' exp ';'
   35        | bloco

   36 else: TK_ELSE bloco

   37 exp: exp_or

   38 exp_or: exp_and
   39       | exp_and TK_OR exp_and

   40 exp_and: exp_equals
   41        | exp_equals TK_AND exp_equals

   42 exp_equals: exp_comparacao TK_EQUALS exp_comparacao
   43           | exp_comparacao TK_NOTEQUALS exp_comparacao
   44           | exp_comparacao

   45 exp_comparacao: exp_somasub TK_LEQUALS exp_somasub
   46               | exp_somasub TK_GEQUALS exp_somasub
   47               | exp_somasub TK_LESSER exp_somasub
   48               | exp_somasub TK_GREATER exp_somasub
   49               | exp_somasub

   50 exp_somasub: exp_multdiv TK_MINUS exp_multdiv
   51            | exp_multdiv TK_PLUS exp_multdiv
   52            | exp_multdiv

   53 exp_multdiv: exp_posfixada TK_MULTIPLY exp_prefixada
   54            | exp_posfixada TK_DIVISION exp_prefixada
   55            | exp_posfixada

   56 exp_prefixada: TK_NOT exp_prefixada
   57              | TK_MINUS exp_prefixada
   58              | exp_posfixada

   59 exp_posfixada: exp_generica
   60              | exp_generica TK_AS tipo
   61              | exp_new

   62 exp_new: TK_NEW tipo '[' exp_somasub ']'

   63 exp_generica: generico
   64             | chamada

   65 chamada: TK_ID '(' lista_exp ')'

   66 lista_exp: exp_or exp_opcional

   67 exp_opcional: %empty
   68             | ',' lista_exp

   69 numero: TK_INTVALUE
   70       | TK_FLOATVALUE
   71       | TK_LITERALVALUE

   72 string: TK_STRING

   73 generico: numero
   74         | var
   75         | string
   76         | '(' exp ')'
   77         | TK_TRUE
   78         | TK_FALSE
   79         | TK_LITERAL


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 12 65 76
    ')' (41) 12 65 76
    ',' (44) 19 68
    ':' (58) 3 12 21
    ';' (59) 3 30 31 32 33 34
    '@' (64) 34
    '[' (91) 7 24 62
    ']' (93) 7 24 62
    '{' (123) 22
    '}' (125) 22
    error (256)
    TK_CHAR (258) 8
    TK_INT (259) 9
    TK_FLOAT (260) 10
    TK_BOOL (261) 11
    TK_RETURN (262) 31 32
    TK_IF (263) 27 28
    TK_ELSE (264) 36
    TK_AS (265) 60
    TK_NEW (266) 62
    TK_WHILE (267) 29
    TK_TRUE (268) 77
    TK_FALSE (269) 78
    TK_PLUS (270) 51
    TK_MINUS (271) 50 57
    TK_MULTIPLY (272) 53
    TK_DIVISION (273) 54
    TK_ATTRIBUITION (274) 30
    TK_EQUALS (275) 42
    TK_NOTEQUALS (276) 43
    TK_GEQUALS (277) 46
    TK_LEQUALS (278) 45
    TK_GREATER (279) 48
    TK_LESSER (280) 47
    TK_NOT (281) 56
    TK_AND (282) 41
    TK_OR (283) 39
    TK_ID (284) 3 12 21 23 65
    TK_STRING (285) 72
    TK_LITERAL (286) 79
    TK_INTVALUE (287) 69
    TK_FLOATVALUE (288) 70
    TK_LITERALVALUE (289) 71


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    programa (46)
        on left: 1
        on right: 0
    definicao (47)
        on left: 2
        on right: 1
    def_var (48)
        on left: 3
        on right: 4
    def_vars (49)
        on left: 4 5
        on right: 2 4 22
    tipo (50)
        on left: 6 7
        on right: 3 7 15 21 60 62
    tipo_primario (51)
        on left: 8 9 10 11
        on right: 6
    def_funcao (52)
        on left: 12
        on right: 13
    def_funcoes (53)
        on left: 13 14
        on right: 2 13
    tipo_retorno (54)
        on left: 15 16
        on right: 12
    parametros (55)
        on left: 17 18
        on right: 12
    parametrosAlt (56)
        on left: 19 20
        on right: 17 19
    parametro (57)
        on left: 21
        on right: 17 19
    bloco (58)
        on left: 22
        on right: 12 27 28 29 35 36
    var (59)
        on left: 23 24
        on right: 30 74
    comandos (60)
        on left: 25 26
        on right: 22 25
    comando (61)
        on left: 27 28 29 30 31 32 33 34 35
        on right: 25
    else (62)
        on left: 36
        on right: 28
    exp (63)
        on left: 37
        on right: 27 28 29 30 34 76
    exp_or (64)
        on left: 38 39
        on right: 31 37 66
    exp_and (65)
        on left: 40 41
        on right: 38 39
    exp_equals (66)
        on left: 42 43 44
        on right: 40 41
    exp_comparacao (67)
        on left: 45 46 47 48 49
        on right: 42 43 44
    exp_somasub (68)
        on left: 50 51 52
        on right: 24 45 46 47 48 49 62
    exp_multdiv (69)
        on left: 53 54 55
        on right: 50 51 52
    exp_prefixada (70)
        on left: 56 57 58
        on right: 53 54 56 57
    exp_posfixada (71)
        on left: 59 60 61
        on right: 53 54 55 58
    exp_new (72)
        on left: 62
        on right: 61
    exp_generica (73)
        on left: 63 64
        on right: 24 59 60
    chamada (74)
        on left: 65
        on right: 33 64
    lista_exp (75)
        on left: 66
        on right: 65 68
    exp_opcional (76)
        on left: 67 68
        on right: 66
    numero (77)
        on left: 69 70 71
        on right: 73
    string (78)
        on left: 72
        on right: 75
    generico (79)
        on left: 73 74 75 76 77 78 79
        on right: 63


State 0

    0 $accept: . programa $end
    1 programa: . definicao
    2 definicao: . def_vars def_funcoes
    4 def_vars: . def_vars def_var
    5         | . %empty

    $default  reduce using rule 5 (def_vars)

    programa   go to state 1
    definicao  go to state 2
    def_vars   go to state 3


State 1

    0 $accept: programa . $end

    $end  shift, and go to state 4


State 2

    1 programa: definicao .

    $default  reduce using rule 1 (programa)


State 3

    2 definicao: def_vars . def_funcoes
    3 def_var: . TK_ID ':' tipo ';'
    4 def_vars: def_vars . def_var
   12 def_funcao: . TK_ID '(' parametros ')' ':' tipo_retorno bloco
   13 def_funcoes: . def_funcao def_funcoes
   14            | . %empty  [$end]

    TK_ID  shift, and go to state 5

    $default  reduce using rule 14 (def_funcoes)

    def_var      go to state 6
    def_funcao   go to state 7
    def_funcoes  go to state 8


State 4

    0 $accept: programa $end .

    $default  accept


State 5

    3 def_var: TK_ID . ':' tipo ';'
   12 def_funcao: TK_ID . '(' parametros ')' ':' tipo_retorno bloco

    ':'  shift, and go to state 9
    '('  shift, and go to state 10


State 6

    4 def_vars: def_vars def_var .

    $default  reduce using rule 4 (def_vars)


State 7

   12 def_funcao: . TK_ID '(' parametros ')' ':' tipo_retorno bloco
   13 def_funcoes: . def_funcao def_funcoes
   13            | def_funcao . def_funcoes
   14            | . %empty  [$end]

    TK_ID  shift, and go to state 11

    $default  reduce using rule 14 (def_funcoes)

    def_funcao   go to state 7
    def_funcoes  go to state 12


State 8

    2 definicao: def_vars def_funcoes .

    $default  reduce using rule 2 (definicao)


State 9

    3 def_var: TK_ID ':' . tipo ';'
    6 tipo: . tipo_primario
    7     | . '[' tipo ']'
    8 tipo_primario: . TK_CHAR
    9              | . TK_INT
   10              | . TK_FLOAT
   11              | . TK_BOOL

    TK_CHAR   shift, and go to state 13
    TK_INT    shift, and go to state 14
    TK_FLOAT  shift, and go to state 15
    TK_BOOL   shift, and go to state 16
    '['       shift, and go to state 17

    tipo           go to state 18
    tipo_primario  go to state 19


State 10

   12 def_funcao: TK_ID '(' . parametros ')' ':' tipo_retorno bloco
   17 parametros: . parametro parametrosAlt
   18           | . %empty  [')']
   21 parametro: . TK_ID ':' tipo

    TK_ID  shift, and go to state 20

    $default  reduce using rule 18 (parametros)

    parametros  go to state 21
    parametro   go to state 22


State 11

   12 def_funcao: TK_ID . '(' parametros ')' ':' tipo_retorno bloco

    '('  shift, and go to state 10


State 12

   13 def_funcoes: def_funcao def_funcoes .

    $default  reduce using rule 13 (def_funcoes)


State 13

    8 tipo_primario: TK_CHAR .

    $default  reduce using rule 8 (tipo_primario)


State 14

    9 tipo_primario: TK_INT .

    $default  reduce using rule 9 (tipo_primario)


State 15

   10 tipo_primario: TK_FLOAT .

    $default  reduce using rule 10 (tipo_primario)


State 16

   11 tipo_primario: TK_BOOL .

    $default  reduce using rule 11 (tipo_primario)


State 17

    6 tipo: . tipo_primario
    7     | . '[' tipo ']'
    7     | '[' . tipo ']'
    8 tipo_primario: . TK_CHAR
    9              | . TK_INT
   10              | . TK_FLOAT
   11              | . TK_BOOL

    TK_CHAR   shift, and go to state 13
    TK_INT    shift, and go to state 14
    TK_FLOAT  shift, and go to state 15
    TK_BOOL   shift, and go to state 16
    '['       shift, and go to state 17

    tipo           go to state 23
    tipo_primario  go to state 19


State 18

    3 def_var: TK_ID ':' tipo . ';'

    ';'  shift, and go to state 24


State 19

    6 tipo: tipo_primario .

    $default  reduce using rule 6 (tipo)


State 20

   21 parametro: TK_ID . ':' tipo

    ':'  shift, and go to state 25


State 21

   12 def_funcao: TK_ID '(' parametros . ')' ':' tipo_retorno bloco

    ')'  shift, and go to state 26


State 22

   17 parametros: parametro . parametrosAlt
   19 parametrosAlt: . ',' parametro parametrosAlt
   20              | . %empty  [')']

    ','  shift, and go to state 27

    $default  reduce using rule 20 (parametrosAlt)

    parametrosAlt  go to state 28


State 23

    7 tipo: '[' tipo . ']'

    ']'  shift, and go to state 29


State 24

    3 def_var: TK_ID ':' tipo ';' .

    $default  reduce using rule 3 (def_var)


State 25

    6 tipo: . tipo_primario
    7     | . '[' tipo ']'
    8 tipo_primario: . TK_CHAR
    9              | . TK_INT
   10              | . TK_FLOAT
   11              | . TK_BOOL
   21 parametro: TK_ID ':' . tipo

    TK_CHAR   shift, and go to state 13
    TK_INT    shift, and go to state 14
    TK_FLOAT  shift, and go to state 15
    TK_BOOL   shift, and go to state 16
    '['       shift, and go to state 17

    tipo           go to state 30
    tipo_primario  go to state 19


State 26

   12 def_funcao: TK_ID '(' parametros ')' . ':' tipo_retorno bloco

    ':'  shift, and go to state 31


State 27

   19 parametrosAlt: ',' . parametro parametrosAlt
   21 parametro: . TK_ID ':' tipo

    TK_ID  shift, and go to state 20

    parametro  go to state 32


State 28

   17 parametros: parametro parametrosAlt .

    $default  reduce using rule 17 (parametros)


State 29

    7 tipo: '[' tipo ']' .

    $default  reduce using rule 7 (tipo)


State 30

   21 parametro: TK_ID ':' tipo .

    $default  reduce using rule 21 (parametro)


State 31

    6 tipo: . tipo_primario
    7     | . '[' tipo ']'
    8 tipo_primario: . TK_CHAR
    9              | . TK_INT
   10              | . TK_FLOAT
   11              | . TK_BOOL
   12 def_funcao: TK_ID '(' parametros ')' ':' . tipo_retorno bloco
   15 tipo_retorno: . tipo
   16             | . %empty  ['{']

    TK_CHAR   shift, and go to state 13
    TK_INT    shift, and go to state 14
    TK_FLOAT  shift, and go to state 15
    TK_BOOL   shift, and go to state 16
    '['       shift, and go to state 17

    $default  reduce using rule 16 (tipo_retorno)

    tipo           go to state 33
    tipo_primario  go to state 19
    tipo_retorno   go to state 34


State 32

   19 parametrosAlt: . ',' parametro parametrosAlt
   19              | ',' parametro . parametrosAlt
   20              | . %empty  [')']

    ','  shift, and go to state 27

    $default  reduce using rule 20 (parametrosAlt)

    parametrosAlt  go to state 35


State 33

   15 tipo_retorno: tipo .

    $default  reduce using rule 15 (tipo_retorno)


State 34

   12 def_funcao: TK_ID '(' parametros ')' ':' tipo_retorno . bloco
   22 bloco: . '{' def_vars comandos '}'

    '{'  shift, and go to state 36

    bloco  go to state 37


State 35

   19 parametrosAlt: ',' parametro parametrosAlt .

    $default  reduce using rule 19 (parametrosAlt)


State 36

    4 def_vars: . def_vars def_var
    5         | . %empty
   22 bloco: '{' . def_vars comandos '}'

    $default  reduce using rule 5 (def_vars)

    def_vars  go to state 38


State 37

   12 def_funcao: TK_ID '(' parametros ')' ':' tipo_retorno bloco .

    $default  reduce using rule 12 (def_funcao)


State 38

    3 def_var: . TK_ID ':' tipo ';'
    4 def_vars: def_vars . def_var
   22 bloco: . '{' def_vars comandos '}'
   22      | '{' def_vars . comandos '}'
   23 var: . TK_ID
   24    | . exp_generica '[' exp_somasub ']'
   25 comandos: . comando comandos
   26         | . %empty  ['}']
   27 comando: . TK_IF exp bloco
   28        | . TK_IF exp bloco else
   29        | . TK_WHILE exp bloco
   30        | . var TK_ATTRIBUITION exp ';'
   31        | . TK_RETURN exp_or ';'
   32        | . TK_RETURN ';'
   33        | . chamada ';'
   34        | . '@' exp ';'
   35        | . bloco
   63 exp_generica: . generico
   64             | . chamada
   65 chamada: . TK_ID '(' lista_exp ')'
   69 numero: . TK_INTVALUE
   70       | . TK_FLOATVALUE
   71       | . TK_LITERALVALUE
   72 string: . TK_STRING
   73 generico: . numero
   74         | . var
   75         | . string
   76         | . '(' exp ')'
   77         | . TK_TRUE
   78         | . TK_FALSE
   79         | . TK_LITERAL

    TK_RETURN        shift, and go to state 39
    TK_IF            shift, and go to state 40
    TK_WHILE         shift, and go to state 41
    TK_TRUE          shift, and go to state 42
    TK_FALSE         shift, and go to state 43
    TK_ID            shift, and go to state 44
    TK_STRING        shift, and go to state 45
    TK_LITERAL       shift, and go to state 46
    TK_INTVALUE      shift, and go to state 47
    TK_FLOATVALUE    shift, and go to state 48
    TK_LITERALVALUE  shift, and go to state 49
    '('              shift, and go to state 50
    '{'              shift, and go to state 36
    '@'              shift, and go to state 51

    $default  reduce using rule 26 (comandos)

    def_var       go to state 6
    bloco         go to state 52
    var           go to state 53
    comandos      go to state 54
    comando       go to state 55
    exp_generica  go to state 56
    chamada       go to state 57
    numero        go to state 58
    string        go to state 59
    generico      go to state 60


State 39

   23 var: . TK_ID
   24    | . exp_generica '[' exp_somasub ']'
   31 comando: TK_RETURN . exp_or ';'
   32        | TK_RETURN . ';'
   38 exp_or: . exp_and
   39       | . exp_and TK_OR exp_and
   40 exp_and: . exp_equals
   41        | . exp_equals TK_AND exp_equals
   42 exp_equals: . exp_comparacao TK_EQUALS exp_comparacao
   43           | . exp_comparacao TK_NOTEQUALS exp_comparacao
   44           | . exp_comparacao
   45 exp_comparacao: . exp_somasub TK_LEQUALS exp_somasub
   46               | . exp_somasub TK_GEQUALS exp_somasub
   47               | . exp_somasub TK_LESSER exp_somasub
   48               | . exp_somasub TK_GREATER exp_somasub
   49               | . exp_somasub
   50 exp_somasub: . exp_multdiv TK_MINUS exp_multdiv
   51            | . exp_multdiv TK_PLUS exp_multdiv
   52            | . exp_multdiv
   53 exp_multdiv: . exp_posfixada TK_MULTIPLY exp_prefixada
   54            | . exp_posfixada TK_DIVISION exp_prefixada
   55            | . exp_posfixada
   59 exp_posfixada: . exp_generica
   60              | . exp_generica TK_AS tipo
   61              | . exp_new
   62 exp_new: . TK_NEW tipo '[' exp_somasub ']'
   63 exp_generica: . generico
   64             | . chamada
   65 chamada: . TK_ID '(' lista_exp ')'
   69 numero: . TK_INTVALUE
   70       | . TK_FLOATVALUE
   71       | . TK_LITERALVALUE
   72 string: . TK_STRING
   73 generico: . numero
   74         | . var
   75         | . string
   76         | . '(' exp ')'
   77         | . TK_TRUE
   78         | . TK_FALSE
   79         | . TK_LITERAL

    TK_NEW           shift, and go to state 61
    TK_TRUE          shift, and go to state 42
    TK_FALSE         shift, and go to state 43
    TK_ID            shift, and go to state 62
    TK_STRING        shift, and go to state 45
    TK_LITERAL       shift, and go to state 46
    TK_INTVALUE      shift, and go to state 47
    TK_FLOATVALUE    shift, and go to state 48
    TK_LITERALVALUE  shift, and go to state 49
    ';'              shift, and go to state 63
    '('              shift, and go to state 50

    var             go to state 64
    exp_or          go to state 65
    exp_and         go to state 66
    exp_equals      go to state 67
    exp_comparacao  go to state 68
    exp_somasub     go to state 69
    exp_multdiv     go to state 70
    exp_posfixada   go to state 71
    exp_new         go to state 72
    exp_generica    go to state 73
    chamada         go to state 74
    numero          go to state 58
    string          go to state 59
    generico        go to state 60


State 40

   23 var: . TK_ID
   24    | . exp_generica '[' exp_somasub ']'
   27 comando: TK_IF . exp bloco
   28        | TK_IF . exp bloco else
   37 exp: . exp_or
   38 exp_or: . exp_and
   39       | . exp_and TK_OR exp_and
   40 exp_and: . exp_equals
   41        | . exp_equals TK_AND exp_equals
   42 exp_equals: . exp_comparacao TK_EQUALS exp_comparacao
   43           | . exp_comparacao TK_NOTEQUALS exp_comparacao
   44           | . exp_comparacao
   45 exp_comparacao: . exp_somasub TK_LEQUALS exp_somasub
   46               | . exp_somasub TK_GEQUALS exp_somasub
   47               | . exp_somasub TK_LESSER exp_somasub
   48               | . exp_somasub TK_GREATER exp_somasub
   49               | . exp_somasub
   50 exp_somasub: . exp_multdiv TK_MINUS exp_multdiv
   51            | . exp_multdiv TK_PLUS exp_multdiv
   52            | . exp_multdiv
   53 exp_multdiv: . exp_posfixada TK_MULTIPLY exp_prefixada
   54            | . exp_posfixada TK_DIVISION exp_prefixada
   55            | . exp_posfixada
   59 exp_posfixada: . exp_generica
   60              | . exp_generica TK_AS tipo
   61              | . exp_new
   62 exp_new: . TK_NEW tipo '[' exp_somasub ']'
   63 exp_generica: . generico
   64             | . chamada
   65 chamada: . TK_ID '(' lista_exp ')'
   69 numero: . TK_INTVALUE
   70       | . TK_FLOATVALUE
   71       | . TK_LITERALVALUE
   72 string: . TK_STRING
   73 generico: . numero
   74         | . var
   75         | . string
   76         | . '(' exp ')'
   77         | . TK_TRUE
   78         | . TK_FALSE
   79         | . TK_LITERAL

    TK_NEW           shift, and go to state 61
    TK_TRUE          shift, and go to state 42
    TK_FALSE         shift, and go to state 43
    TK_ID            shift, and go to state 62
    TK_STRING        shift, and go to state 45
    TK_LITERAL       shift, and go to state 46
    TK_INTVALUE      shift, and go to state 47
    TK_FLOATVALUE    shift, and go to state 48
    TK_LITERALVALUE  shift, and go to state 49
    '('              shift, and go to state 50

    var             go to state 64
    exp             go to state 75
    exp_or          go to state 76
    exp_and         go to state 66
    exp_equals      go to state 67
    exp_comparacao  go to state 68
    exp_somasub     go to state 69
    exp_multdiv     go to state 70
    exp_posfixada   go to state 71
    exp_new         go to state 72
    exp_generica    go to state 73
    chamada         go to state 74
    numero          go to state 58
    string          go to state 59
    generico        go to state 60


State 41

   23 var: . TK_ID
   24    | . exp_generica '[' exp_somasub ']'
   29 comando: TK_WHILE . exp bloco
   37 exp: . exp_or
   38 exp_or: . exp_and
   39       | . exp_and TK_OR exp_and
   40 exp_and: . exp_equals
   41        | . exp_equals TK_AND exp_equals
   42 exp_equals: . exp_comparacao TK_EQUALS exp_comparacao
   43           | . exp_comparacao TK_NOTEQUALS exp_comparacao
   44           | . exp_comparacao
   45 exp_comparacao: . exp_somasub TK_LEQUALS exp_somasub
   46               | . exp_somasub TK_GEQUALS exp_somasub
   47               | . exp_somasub TK_LESSER exp_somasub
   48               | . exp_somasub TK_GREATER exp_somasub
   49               | . exp_somasub
   50 exp_somasub: . exp_multdiv TK_MINUS exp_multdiv
   51            | . exp_multdiv TK_PLUS exp_multdiv
   52            | . exp_multdiv
   53 exp_multdiv: . exp_posfixada TK_MULTIPLY exp_prefixada
   54            | . exp_posfixada TK_DIVISION exp_prefixada
   55            | . exp_posfixada
   59 exp_posfixada: . exp_generica
   60              | . exp_generica TK_AS tipo
   61              | . exp_new
   62 exp_new: . TK_NEW tipo '[' exp_somasub ']'
   63 exp_generica: . generico
   64             | . chamada
   65 chamada: . TK_ID '(' lista_exp ')'
   69 numero: . TK_INTVALUE
   70       | . TK_FLOATVALUE
   71       | . TK_LITERALVALUE
   72 string: . TK_STRING
   73 generico: . numero
   74         | . var
   75         | . string
   76         | . '(' exp ')'
   77         | . TK_TRUE
   78         | . TK_FALSE
   79         | . TK_LITERAL

    TK_NEW           shift, and go to state 61
    TK_TRUE          shift, and go to state 42
    TK_FALSE         shift, and go to state 43
    TK_ID            shift, and go to state 62
    TK_STRING        shift, and go to state 45
    TK_LITERAL       shift, and go to state 46
    TK_INTVALUE      shift, and go to state 47
    TK_FLOATVALUE    shift, and go to state 48
    TK_LITERALVALUE  shift, and go to state 49
    '('              shift, and go to state 50

    var             go to state 64
    exp             go to state 77
    exp_or          go to state 76
    exp_and         go to state 66
    exp_equals      go to state 67
    exp_comparacao  go to state 68
    exp_somasub     go to state 69
    exp_multdiv     go to state 70
    exp_posfixada   go to state 71
    exp_new         go to state 72
    exp_generica    go to state 73
    chamada         go to state 74
    numero          go to state 58
    string          go to state 59
    generico        go to state 60


State 42

   77 generico: TK_TRUE .

    $default  reduce using rule 77 (generico)


State 43

   78 generico: TK_FALSE .

    $default  reduce using rule 78 (generico)


State 44

    3 def_var: TK_ID . ':' tipo ';'
   23 var: TK_ID .  [TK_ATTRIBUITION, '[']
   65 chamada: TK_ID . '(' lista_exp ')'

    ':'  shift, and go to state 9
    '('  shift, and go to state 78

    $default  reduce using rule 23 (var)


State 45

   72 string: TK_STRING .

    $default  reduce using rule 72 (string)


State 46

   79 generico: TK_LITERAL .

    $default  reduce using rule 79 (generico)


State 47

   69 numero: TK_INTVALUE .

    $default  reduce using rule 69 (numero)


State 48

   70 numero: TK_FLOATVALUE .

    $default  reduce using rule 70 (numero)


State 49

   71 numero: TK_LITERALVALUE .

    $default  reduce using rule 71 (numero)


State 50

   23 var: . TK_ID
   24    | . exp_generica '[' exp_somasub ']'
   37 exp: . exp_or
   38 exp_or: . exp_and
   39       | . exp_and TK_OR exp_and
   40 exp_and: . exp_equals
   41        | . exp_equals TK_AND exp_equals
   42 exp_equals: . exp_comparacao TK_EQUALS exp_comparacao
   43           | . exp_comparacao TK_NOTEQUALS exp_comparacao
   44           | . exp_comparacao
   45 exp_comparacao: . exp_somasub TK_LEQUALS exp_somasub
   46               | . exp_somasub TK_GEQUALS exp_somasub
   47               | . exp_somasub TK_LESSER exp_somasub
   48               | . exp_somasub TK_GREATER exp_somasub
   49               | . exp_somasub
   50 exp_somasub: . exp_multdiv TK_MINUS exp_multdiv
   51            | . exp_multdiv TK_PLUS exp_multdiv
   52            | . exp_multdiv
   53 exp_multdiv: . exp_posfixada TK_MULTIPLY exp_prefixada
   54            | . exp_posfixada TK_DIVISION exp_prefixada
   55            | . exp_posfixada
   59 exp_posfixada: . exp_generica
   60              | . exp_generica TK_AS tipo
   61              | . exp_new
   62 exp_new: . TK_NEW tipo '[' exp_somasub ']'
   63 exp_generica: . generico
   64             | . chamada
   65 chamada: . TK_ID '(' lista_exp ')'
   69 numero: . TK_INTVALUE
   70       | . TK_FLOATVALUE
   71       | . TK_LITERALVALUE
   72 string: . TK_STRING
   73 generico: . numero
   74         | . var
   75         | . string
   76         | . '(' exp ')'
   76         | '(' . exp ')'
   77         | . TK_TRUE
   78         | . TK_FALSE
   79         | . TK_LITERAL

    TK_NEW           shift, and go to state 61
    TK_TRUE          shift, and go to state 42
    TK_FALSE         shift, and go to state 43
    TK_ID            shift, and go to state 62
    TK_STRING        shift, and go to state 45
    TK_LITERAL       shift, and go to state 46
    TK_INTVALUE      shift, and go to state 47
    TK_FLOATVALUE    shift, and go to state 48
    TK_LITERALVALUE  shift, and go to state 49
    '('              shift, and go to state 50

    var             go to state 64
    exp             go to state 79
    exp_or          go to state 76
    exp_and         go to state 66
    exp_equals      go to state 67
    exp_comparacao  go to state 68
    exp_somasub     go to state 69
    exp_multdiv     go to state 70
    exp_posfixada   go to state 71
    exp_new         go to state 72
    exp_generica    go to state 73
    chamada         go to state 74
    numero          go to state 58
    string          go to state 59
    generico        go to state 60


State 51

   23 var: . TK_ID
   24    | . exp_generica '[' exp_somasub ']'
   34 comando: '@' . exp ';'
   37 exp: . exp_or
   38 exp_or: . exp_and
   39       | . exp_and TK_OR exp_and
   40 exp_and: . exp_equals
   41        | . exp_equals TK_AND exp_equals
   42 exp_equals: . exp_comparacao TK_EQUALS exp_comparacao
   43           | . exp_comparacao TK_NOTEQUALS exp_comparacao
   44           | . exp_comparacao
   45 exp_comparacao: . exp_somasub TK_LEQUALS exp_somasub
   46               | . exp_somasub TK_GEQUALS exp_somasub
   47               | . exp_somasub TK_LESSER exp_somasub
   48               | . exp_somasub TK_GREATER exp_somasub
   49               | . exp_somasub
   50 exp_somasub: . exp_multdiv TK_MINUS exp_multdiv
   51            | . exp_multdiv TK_PLUS exp_multdiv
   52            | . exp_multdiv
   53 exp_multdiv: . exp_posfixada TK_MULTIPLY exp_prefixada
   54            | . exp_posfixada TK_DIVISION exp_prefixada
   55            | . exp_posfixada
   59 exp_posfixada: . exp_generica
   60              | . exp_generica TK_AS tipo
   61              | . exp_new
   62 exp_new: . TK_NEW tipo '[' exp_somasub ']'
   63 exp_generica: . generico
   64             | . chamada
   65 chamada: . TK_ID '(' lista_exp ')'
   69 numero: . TK_INTVALUE
   70       | . TK_FLOATVALUE
   71       | . TK_LITERALVALUE
   72 string: . TK_STRING
   73 generico: . numero
   74         | . var
   75         | . string
   76         | . '(' exp ')'
   77         | . TK_TRUE
   78         | . TK_FALSE
   79         | . TK_LITERAL

    TK_NEW           shift, and go to state 61
    TK_TRUE          shift, and go to state 42
    TK_FALSE         shift, and go to state 43
    TK_ID            shift, and go to state 62
    TK_STRING        shift, and go to state 45
    TK_LITERAL       shift, and go to state 46
    TK_INTVALUE      shift, and go to state 47
    TK_FLOATVALUE    shift, and go to state 48
    TK_LITERALVALUE  shift, and go to state 49
    '('              shift, and go to state 50
